--- a/src/AppBundle/Resources/views/Admin/index.html.twig
+++ b/src/AppBundle/Resources/views/Admin/index.html.twig
@@ -1,6 +1,4 @@
 {% extends 'AppBundle::base.html.twig' %}
 {% block body %}
-    <div class="page-header">
-        <h1>Movies</h1>
-    </div>
+    <h1>HELLO ADMIN</h1>
 {% endblock %}
