--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -1,13 +1,52 @@
+{% set _title = block('title') %}
+{% set _breadcrumb = block('breadcrumb') %}
 <!DOCTYPE html>
-<html>
+<html lang="{{app.request.getLocale()}}" {% block html_tags %}{% endblock %}>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <title>{% if _title is defined and _title is not empty %}{{ _title|raw }} - {% endif%}Movie Catalog</title>
+        {% block stylesheets %}
+            <link href="{{ asset('bundles/app/lib/bootstrap-3.3.6-dist/css/bootstrap.min.css') }}" rel="stylesheet">
+            <link href="{{ asset('bundles/app/lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css') }}" rel="stylesheet">
+            <style type="text/css">
+                body {
+                  padding-top: 70px;
+                  padding-bottom: 30px;
+                }
+            </style>
+        {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        <!-- Fixed navbar -->
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="{{ path('homepage') }}">Movie Catalog</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="{{ path('fos_user_security_login') }}">Login</a>
+                        </li>
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div>
+        </nav>
+        <div class="container theme-showcase" role="main">
+            {% block breadcrumb %}
+            {% endblock %}
+            {% block body %}{% endblock %}
+        </div>
+        {% block javascripts %}
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+            <script src="{{ asset('bundles/app/lib/bootstrap-3.3.6-dist/js/bootstrap.min.js') }}"></script>
+        {% endblock %}
     </body>
 </html>
