--- a/src/AppBundle/Resources/views/Admin/index.html.twig
+++ b/src/AppBundle/Resources/views/Admin/index.html.twig
@@ -1,4 +1,32 @@
 {% extends 'AppBundle::base.html.twig' %}
+{% block current_breadcrumb %}
+    Admin
+{% endblock %}
 {% block body %}
-    <h1>HELLO ADMIN</h1>
+    <div class="page-header">
+        <h1>Dashboard</h1>
+    </div>
+    <table class="table table-striped table-bordered">
+        <colgroup>
+            <col class="col-xs-7">
+            <col class="col-xs-2">
+        </colgroup>
+        <thead>
+            <tr>
+                <th>Table name</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for table in tables %}
+            <tr>
+                <td>{{ table.label }}</td>
+                <td>
+                    <a href="{{ path(table.idx) }}" class="btn btn-default btn-xs">List</a>
+                    <a href="{{ path(table.idx ~ '_new') }}" class="btn btn-primary btn-xs">Create</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
